# Helios-Browser

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.35ef6f8  DOCS.md  Doxyfile  Main.qml  README.md  browserwindow.cpp  browserwindow.h  build.ps1  main.cpp  resources.qrc
.github/workflows/: build.yml  cmake-multi-platform.yml  cmake-single-platform.yml
components/: addressbox.cpp  addressbox.h  iconButton.cpp  searchDialog.cpp  splitTabDialog.cpp  splitTabDialog.h  splitTabMenu.cpp  splitTabMenu.h  tab.cpp  tab.h  tabGroup.cpp  tabGroup.h  tabManager.cpp  tabManager.h  tabTitleBar.cpp  tabTitleBar.h  titlebar.cpp  titlebar.h  titlebarbuttons.cpp  titlebarbuttons.h  webview.cpp  webview.h
docs/html/: BrowserWindow_8h_source.html  annotated.html  argument_8h_source.html  argument__p_8h_source.html  build_2__install_2include_2qmsetup_2qmsetup__global_8h_source.html  build_2__install_2include_2qmsetup_2shareddata_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2abstractwindowcontext__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2cocoawindowcontext__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2nativeeventfilter__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2qtwindowcontext__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2qwkglobal__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2qwkwindowsextra__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2sharedeventfilter__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2styleagent__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2systemwindow__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2win32windowcontext__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2windowagentbase__p_8h_source.html  build_2third__party_2qwindowkit_2include_2QWKCore_2private_2windowitemdelegate__p_8h_source.html  classBrowserWindow-members.html  classBrowserWindow.html  (+349 more)
src/: CMakeLists.txt  main.cpp
(+405 files in other folders)
